<resources>
    <string name="app_name">Bullseye</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_reset">Reset</string>
    <string name="text_stopwatch_counter_zero">%02d:%02d.%03d</string>
    <string name="text_factor_value">%.3f</string>
    <string name="button_add_alpha">A (%d)</string>
    <string name="button_add_charlie">C (%d)</string>
    <string name="button_add_delta">D (%d)</string>
    <string name="text_factorCalculation">%d pts / %.3f secs</string>
    <string name="text_count_A">A x %d = %d</string>
    <string name="text_count_C">C x %d = %d</string>
    <string name="text_count_D">D x %d = %d</string>
    <string name="button_reset_points">Reset Points</string>
    <string name="button_add_no_shoot">NS (%d)</string>
    <string name="button_add_miss">M (%d)</string>
    <string name="text_count_NS">NS x %d = %d</string>
    <string name="text_count_M">M x %d = %d</string>
    <string name="sound_details_button">Sound</string>
    <string name="button_back">Back</string>
</resources>
